examples/test/testpolicy4210.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4210
  namespace: namespace50
spec:
  podSelector:
    matchLabels:
      key31: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value27
          key43: value21
      podSelector:
        matchLabels:
          key49: value46
          key42: value31
          key41: value0
